fixed some spacing and sizing issues, now final

--- a/src/styles/landingpage.scss
+++ b/src/styles/landingpage.scss
@@ -72,7 +72,7 @@
 }
 
 .bottomHalfContainer {
-  height: 60vh;
+  height: 55vh;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -111,12 +111,11 @@
 }
 
 .stepText {
-  // margin-top: 1.5em;
   text-align: center;
 }
 
 .stepImage {
   margin-top: 1em;
-  max-height: 20vh;
+  max-height: 15vh;
   margin-bottom: 1em;
 }
